crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@91.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION functest_IS_3(a int default 1, out b int)\n    RETURNS int\n    LANGUAGE SQL\n    AS 'SELECT $1';"
---
CreateFunctionStmt@0..110
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..29 "functest_IS_3"
  Ascii40@29..30 "("
  FunctionParameter@30..45
    Ident@30..31 "a"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
    Whitespace@35..36 " "
    Default@36..43 "default"
    Whitespace@43..44 " "
    AConst@44..45
      Iconst@44..45 "1"
  Ascii44@45..46 ","
  Whitespace@46..47 " "
  FunctionParameter@47..56
    OutP@47..50 "out"
    Whitespace@50..51 " "
    Ident@51..52 "b"
    Whitespace@52..53 " "
    TypeName@53..56
      IntP@53..56 "int"
  Ascii41@56..57 ")"
  Newline@57..58 "\n"
  Whitespace@58..62 "    "
  Returns@62..69 "RETURNS"
  Whitespace@69..70 " "
  TypeName@70..73
    IntP@70..73 "int"
  Newline@73..74 "\n"
  Whitespace@74..78 "    "
  DefElem@78..90
    Language@78..86 "LANGUAGE"
    Whitespace@86..87 " "
    SqlP@87..90 "SQL"
  Newline@90..91 "\n"
  Whitespace@91..95 "    "
  DefElem@95..109
    As@95..97 "AS"
    Whitespace@97..98 " "
    List@98..109
      Sconst@98..109 "'SELECT $1'"
  Ascii59@109..110 ";"

