crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@95.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION functest_IS_4b(x int DEFAULT functest_IS_4a()) RETURNS int LANGUAGE SQL AS 'SELECT x';"
---
CreateFunctionStmt@0..102
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..30 "functest_IS_4b"
  Ascii40@30..31 "("
  FunctionParameter@31..59
    Ident@31..32 "x"
    Whitespace@32..33 " "
    TypeName@33..36
      IntP@33..36 "int"
    Whitespace@36..37 " "
    Default@37..44 "DEFAULT"
    Whitespace@44..45 " "
    FuncCall@45..59
      Ident@45..59 "functest_IS_4a"
  Ascii40@59..60 "("
  Ascii41@60..61 ")"
  Ascii41@61..62 ")"
  Whitespace@62..63 " "
  Returns@63..70 "RETURNS"
  Whitespace@70..71 " "
  TypeName@71..74
    IntP@71..74 "int"
  Whitespace@74..75 " "
  DefElem@75..87
    Language@75..83 "LANGUAGE"
    Whitespace@83..84 " "
    SqlP@84..87 "SQL"
  Whitespace@87..88 " "
  DefElem@88..101
    As@88..90 "AS"
    Whitespace@90..91 " "
    List@91..101
      Sconst@91..101 "'SELECT x'"
  Ascii59@101..102 ";"

