crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@97.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION functest_IS_5(x int DEFAULT nextval('functest1'))\n    RETURNS int\n    LANGUAGE SQL\n    AS 'SELECT x';"
---
CreateFunctionStmt@0..117
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..29 "functest_IS_5"
  Ascii40@29..30 "("
  FunctionParameter@30..63
    Ident@30..31 "x"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
    Whitespace@35..36 " "
    Default@36..43 "DEFAULT"
    Whitespace@43..44 " "
    FuncCall@44..63
      Ident@44..51 "nextval"
      Ascii40@51..52 "("
      AConst@52..63
        Sconst@52..63 "'functest1'"
  Ascii41@63..64 ")"
  Ascii41@64..65 ")"
  Newline@65..66 "\n"
  Whitespace@66..70 "    "
  Returns@70..77 "RETURNS"
  Whitespace@77..78 " "
  TypeName@78..81
    IntP@78..81 "int"
  Newline@81..82 "\n"
  Whitespace@82..86 "    "
  DefElem@86..98
    Language@86..94 "LANGUAGE"
    Whitespace@94..95 " "
    SqlP@95..98 "SQL"
  Newline@98..99 "\n"
  Whitespace@99..103 "    "
  DefElem@103..116
    As@103..105 "AS"
    Whitespace@105..106 " "
    List@106..116
      Sconst@106..116 "'SELECT x'"
  Ascii59@116..117 ";"

