crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE functest2 (a int, b int);"
---
CreateStmt@0..38
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "functest2"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  ColumnDef@24..29
    Ident@24..25 "a"
    Whitespace@25..26 " "
    TypeName@26..29
      IntP@26..29 "int"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ColumnDef@31..36
    Ident@31..32 "b"
    Whitespace@32..33 " "
    TypeName@33..36
      IntP@33..36 "int"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

