crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO radix_text_tbl VALUES ('P0123456789abcdefF');"
---
InsertStmt@0..57
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "radix_text_tbl"
  Whitespace@26..27 " "
  SelectStmt@27..55
    Values@27..33 "VALUES"
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..55
      AConst@35..55
        Sconst@35..55 "'P0123456789abcdefF'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

