crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@112.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT count(*) FROM radix_text_tbl WHERE t ~<~  'Aztec                         Ct  ';"
---
SelectStmt@0..86
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "FROM"
  Whitespace@20..21 " "
  RangeVar@21..35
    Ident@21..35 "radix_text_tbl"
  Whitespace@35..36 " "
  Where@36..41 "WHERE"
  Whitespace@41..42 " "
  AExpr@42..85
    ColumnRef@42..43
      Ident@42..43 "t"
    Whitespace@43..44 " "
    Op@44..47 "~<~"
    Whitespace@47..49 "  "
    AConst@49..85
      Sconst@49..85 "'Aztec                ..."
  Ascii59@85..86 ";"

